# automas-notification-mail

./: .gitattributes  README.md  pyproject.toml
.github/: publish.yml
src/notification_mail/: __init__.py  plugin.py  schema.py  template_renderer.py
src/notification_mail/templates/: general_result.html  general_statistics.html
