[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automas_notification_mail"
version = "0.0.3"
description = "Notification email channel"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
dependencies = ["jinja2>=3.1", "pydantic>=2.0"]

[project.entry-points."auto_mas.plugins"]
notification_mail = "notification_mail.plugin:Plugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
notification_mail = ["templates/*.html"]
